gdnative/tests/ui/to_variant_fail_07.stderr
error: unknown argument, expected one of:
           to_variant_with, from_variant_with, with, skip_to_variant, skip_from_variant, skip
 --> $DIR/to_variant_fail_07.rs:5:15
  |
5 |     #[variant(aoeu = "aoeu")]
  |               ^^^^
