gdnative/tests/ui/to_variant_fail_07.rs
use gdnative::prelude::*;

#[derive(ToVariant)]
pub struct Foo {
    #[variant(aoeu = "aoeu")]
    bar: String,
}

fn main() {}
